<resources>
    <string name="app_name">  MealMate</string>
    <string name="email_holder">  Select Account Settings to SignIn or Register</string>


    <string name="search_hint">Enter Search Phrase Here</string>
    <string name="search_btn_text">SEARCH</string>
    <string name="category"> Category</string>

    <string name="placeholder">Placeholder</string>


    <!-- Menu Items and Navigation-->
    <string name="nav_search">Search Recipes</string>
    <string name="nav_recipe_details">View Recipe</string>
    <string name="nav_saved_recipes">Saved Recipes</string>
    <string name="nav_meal_plan">Meal Plan</string>
    <string name="nav_grocery_list">Grocery List</string>
    <string name="nav_misc">Support</string>
    <string name="nav_account"> Account Settings </string>
    <string name="nav_login">Login/Register</string>
    <string name="nav_log_out">Log Out</string>
    <string name="nav_support">Support</string>
    <string name="nav_about">About</string>
    <string name="nav_save_recipe"> Save Recipe </string>
    <string name="nav_view_folders"> View Saved Folders</string>
    <string name="nav_view_recipes"> View Saved Recipes</string>
    <string name="nav_add_ingredients">Add Ingredients</string>

    <string name="nav_open_drawer">Open Navigation Drawer</string>
    <string name="nav_close_drawer">Close Navigation Drawer</string>

    <!-- Saved Recipes -->
    <string name="select_favorites">Favorites</string>
    <string name="select_my_recipes">My Recipes</string>
    <string name="btn_new_folder">New Folder</string>
    <string name="btn_new_recipe">New Recipe</string>
    <string name="ask_folder_name"> Enter a name for the new folder</string>
    <string name="ask_folder_delete"> Delete folder? </string>
    <string name="hint_folder_name"> Desserts </string>
    <string name="ask_save_folder"> Select folder to save to</string>
    <string name="ask_recipe_remove"> Remove this recipe from folder? </string>
    <string name="remove_label">Remove</string>


    <!-- General button text -->
    <string name="btn_add"> Add </string>
    <string name="btn_cancel"> Cancel</string>
    <string name="btn_save"> Save</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_remove"> Remove</string>
    <string name="btn_continue">Continue</string>

    <!-- Text for weekly views-->
    <string name="nav_previous">Prev</string>
    <string name="nav_next">Next</string>


    <!-- Login/Register -->
    <string name="ask_username">Enter Username</string>
    <string name="hint_username">myEmail@email.com</string>
    <string name="ask_pwd">Enter Password</string>
    <string name="hint_pwd">**********</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>

    <!-- Recipe Details -->
    <string name="ingredients_subheader">Ingredients</string>
    <string name="instructions_subheader">Instructions</string>
    <string name="recipe_menu">View Menu</string>
    <string name="fav_recipe">Save Recipe</string>
    <string name="save_recipe">Save </string>
    <string name="nav_nutrition"> View Nutrition </string>
    <string name="basic_nutrition">Basic Nutrition</string>
    <string name="add_to_plan">Add to Meal Plan</string>

    <!-- Meal Plan -->
    <string name="nav_add_meal">Add to Meal Plan</string>
    <string name="ask_meal_plan"> Select Meal Plan</string>
    <string name="ask_meal_plan_day"> Select Day in Meal Plan</string>
    <string name="add_ingredients_prompt">Check off ingredients to add to Grocery List or Continue</string>

    <!-- GroceryList -->
    <string name="nav_new_grocery">Add New Grocery Item</string>
    <string name="grocery_item_outline">Quantity(Units) - Grocery Item</string>
    <string name="btn_add_new_item">ADD NEW GROCERY ITEM</string>

    <!-- Edit item -->
    <string name="btn_save_changes">Save Changes</string>
    <string name="btn_delete_item">Delete Item</string>

    <string name="edit_label">Edit </string>
    <string name="units_label">Units: </string>

    <!-- Create new grocery item -->
    <string name="ask_item_name">Enter Item Name</string>
    <string name="ask_item_units">Select the Units to Use</string>
    <string name="ask_item_quantity">Enter Item Quantity</string>
    <string name="ask_quantity_purchased">Enter Quantity Purchased</string>
    <string name="ask_item_price">Enter purchase amount</string>
    <string name="US_dollars">$</string>

    <string name="hint_item_name"> Avocado</string>
    <string name="hint_item_quantity">5</string>
    <string name="hint_item_price">5.00</string>

    <string name="btn_item_cancel">Cancel</string>
    <string name="btn_item_add">Add </string>


    <!-- New Recipe -->
    <string name="ask_recipe_name">Enter name for recipe</string>
    <string name="hint_recipe_name">Mom\'s Meatloaf</string>

    <string name="nav_new_instruction">New Instruction</string>
    <string name="ask_instruction">Enter instruction</string>
    <string name="hint_instruction">Add 1/2 water</string>
    <string name="ask_category">Select a Category</string>


    <!-- Settings -->
    <string name="login_subheader"> Login Information</string>
    <string name="preferences_subheader"> Preferences</string>
    <string name="data_subheader"> Data</string>

    <string name="email_label">Email: </string>
    <string name="pwd_label">Password: </string>
    <string name="btn_reset_pwd"> Reset Password</string>

    <string name="del_data">Delete User Data</string>
    <string name="del_account">Delete my Account</string>
    <string name="reauthenticate">Re-Authentication</string>
    <string name="reauth_instructions">Please re-enter your password</string>

    <!-- About Information -->
    <string name="app_info">Assistant for Planning Meals</string>
    <string name="last_updated">Last Updated April 24th, 2020</string>
    <string name="developed_by">Developed by Salvador Rodriguez Gomez</string>
    <string name="school_info">St Mary\'s University</string>
    <string name="class_info">CS4395: Senior Project</string>

    <string name="notify_email"> Email Sent</string>
    <string name="warning_email"> Please Enter Your Email</string>
    <string name="warning_pwd"> Please Enter a Password</string>

    <string name="login_pass"> Signed In</string>
    <string name="login_fail"> Sign In Failed</string>
    <string name="register_pass"> New User Created</string>
    <string name="register_fail"> Registration Failed</string>


    <!-- Debug strings -->
    <string name="createUser_success">createUserWithEmail:success</string>
    <string name="createUser_failure">createUserWithEmail:failure</string>
    <string name="signIn_success">signInWithEmail:success</string>
    <string name="signIn_failure">signInWithEmail:failure</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
