<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search_icon"
            android:title="@string/nav_search" />
         <item
             android:id="@+id/nav_saved_recipes"
             android:icon="@drawable/folder_icon"
             android:title="@string/nav_saved_recipes" />
        <item
            android:id="@+id/nav_meal_plan"
            android:icon="@drawable/calender_icon"
            android:title="@string/nav_meal_plan" />
        <item
            android:id="@+id/nav_grocery_list"
            android:icon="@drawable/list_icon"
            android:title="@string/nav_grocery_list" />
    </group>

    <item android:title="@string/nav_misc" >
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings_icon"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/account_icon"
                android:title="@string/nav_login" />
            <item
                android:id="@+id/nav_support"
                android:icon="@drawable/support_icon"
                android:title="@string/nav_support" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/info_icon"
                android:title="@string/nav_about" />
        </menu>
    </item>
</menu>